--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
